# h750tts

./: .gitignore  .mxproject  Makefile  STM32-for-VSCode.config.yaml  STM32H750VBTx_FLASH.ld  STM32Make.make  h750tts.ioc  openocd.cfg
Core/Inc/: i2c.h  i2s.h  im948.h  inv_mpu.h  main.h  mp3.h  mpu6050.h  retarget.h  sdmmc.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  usart.h
Core/Src/: gpio.c  i2c.c  i2s.c  im948.c  inv_mpu.c  inv_mpu_dmp_motion_driver.c  main.c  mp3.c  mpu6050.c  quadspi.c  retarget.c  sdmmc.c  stm32h7xx_it.c  tim.c  usart.c
Middlewares/helix/: assembly.h
omv/: led.py  main.py  protocol.py  server.py  sub_board.py
omv/device/: imgrequests.py  main.py  sub_board.py
omv/server/: algotithms.py
omv/utils/: depth.ipynb  kMandarin_8105.txt  pinyin_convert.py  zerodce.py
server/: main.py  mock_client.py  requirements.txt
server/backend/: algorithms.py  algotithms.py  inference_server.py  monitor.py  monitor_server.py  protocol_constants.py  stream_server.py  utils.py
server/backend/ppocronnx/: utility.py
server/backend/ppocronnx/det/: predict_det.py
server/backend/ppocronnx/rec/: predict_rec.py
server/static/: index.html
server/utils/: apriltag_test.py  depth.ipynb  display_test.py  hands.py  schema.d.ts
voice_pack/: BIN  CMakeLists.txt  DICT  INDEX  create_pack.py  main.c  pinyin_convert.py  pinyin_data.txt
